# af

./: README.md
3d/af/: af.scad
3d/koch/: koch.scad
3d/stl/: af.stl  af_blade.stl  af_led_block.stl  af_lid.stl  af_motor_lock.stl  af_sprocket.stl
fw/essen/: Makefile  README.md  af.c
fw/koch/: CMakeLists.txt  README.md  koch.c
pcb/essen/: af.kicad_pcb  af.kicad_prl  af.kicad_pro  af.kicad_sch  bom.csv
pcb/koch/: afc.kicad_pcb  afc.kicad_prl  afc.kicad_pro  afc.kicad_sch  bom.csv
